--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
             <div class="footer-bottom">
   <p>&copy; 2025 
-    <a href="https://www.instagram.com/neatecno" target="_blank" rel="noopener noreferrer" class="instagram-link">༒ḐℐḼẶ₦⚘</a> - Todos los derechos reservados.
+    <a href="https://www.instagram.com/dilanenriquez50?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer" class="instagram-link">༒ḐℐḼẶ₦⚘</a> - Todos los derechos reservados.
   </p>
 </div>
 
